# figgy

./: Cargo.toml  README.md
src/: lib.rs
tests/: config.json  fake_file.json  person.json
