[package]
name = "figgy"
version = "0.1.1"
edition = "2021"
authors = ["Daniel Coulbourne <daniel@coulb.com>"]
description = "A small library for managing config files which supports heirarchical directories, defaults, and writing initial files"
license = "MIT"
repository = "https://github.com/DanielCoulbourne/figgy"

[badges]
maintenance = { status = "experimental" }

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
